--- a/src/views/Home.module.css
+++ b/src/views/Home.module.css
@@ -8,16 +8,17 @@
     height: 100vh;
 }
 
-h1{
-    font-size: 33px;
+.main > h1{
+    font-size: 38px;
+    color: rgba(255, 255, 255, 0.2);
     font-weight: 600;
     padding: 200px 0;
 
 }
 
 .sideBar {
-    background-color: #202123;
-    width: 244px;
+    background-color: hsl(220, 4%, 13%);
+    width: 300px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -43,18 +44,19 @@ h1{
 }
 
 .info{
-    color:rgba(255, 255, 255, 0.5);
-    font-size: 11px;
+    color:rgba(255, 255, 255, 0.8);
+    font-size: 14px;
+    font-weight: 500;
     padding: 10px;
 }
 
 input {
     width: 100%;
-    padding: 12px 15px;
+    padding: 25px 15px;
     font-size: 20px;
     border: none;
-    border-radius: 4px;
-    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.1);
     box-shadow: rgba(0,0,0,0.05) 0 54px 55px,
     rgba(0,0,0,0.05) 0 -12px 30px,
     rgba(0,0,0,0.05) 0 4px 6px,
@@ -66,16 +68,20 @@ input:focus {
 }
 
 .inputContainer {
+    display: flex;
     position: relative;
     width: 100%;
     max-width: 650px;   
+    align-items: center;
 }
 
 .inputContainer > .submit {
     position: absolute;
-    right: 0;
+    right: 10px;
     bottom: 15px;
+    padding: 10px;
     cursor: pointer;
+    background-color: transparent;
 }
 
 .inputContainer >.submit:hover {
@@ -116,8 +122,12 @@ nav {
 
 .feed{
     overflow: scroll;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
     width: 100%;
-    padding: 0;
+    max-width: 70rem;
+    height: calc(100vh - 17rem);
+    padding: 0;  
 }
 
 .feed > li {
@@ -136,4 +146,18 @@ nav {
 
 .feed > p.role {
     min-width: 100px;
+}
+
+.lowerSide{
+    padding: 2rem;
+}
+.listItems{
+   margin: 0.75rem;
+   display: flex;
+   align-items: center;
+   font-size: 1.6rem;
+}
+.iconImg{
+    margin: 1rem;
+    padding-right: 1rem;
 }
