--- a/src/views/Home.module.css
+++ b/src/views/Home.module.css
@@ -24,6 +24,9 @@
     flex-direction: column;
     justify-content: space-between;
 }
+.sideBar button {
+    cursor: pointer;
+}
 
 .main {
     display: flex;
